--- a/projects/client/src/app/components/driver-forms/driver-forms.component.html
+++ b/projects/client/src/app/components/driver-forms/driver-forms.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <div class="container-fluid">
       <div class="nav-left">
-        <span class="nav-title">My Forms</span>
+        <span class="nav-title" (click)="onMyFormsClick()">My Forms</span>
       </div>
       
       <a class="home-button-flat" routerLink="/dashboard">
