--- a/projects/client/src/app/components/login/login.component.html
+++ b/projects/client/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="login-header">
-    <h1 class="logo">
+    <h1 class="logo" (click)="onAroundNoonClick()">
       <div class="logo-line">AROUND</div>
       <div class="logo-line-1">NOON.</div>
     </h1>
